compiler/toc-analysis/src/typeck/snapshots/toc_analysis__typeck__test__bitwise_op_wrong_type_not.snap
---
source: compiler/toc-analysis/src/typeck/test.rs
expression: "\n    var r : real\n    var _r := not r\n"
---
"r"@(FileId(1), 9..10) [ConstVar(Var, No)]: real
"_r"@(FileId(1), 26..28) [ConstVar(Var, No)]: <error>
"<root>"@(dummy) [Module(No)]: <error>

error at (FileId(1), 32..35): mismatched types for logical `not`
| note for (FileId(1), 36..37): this is of type `real`
| error for (FileId(1), 32..35): cannot apply logical `not` to `real`
| info: operand must be an integer or boolean
