compiler/toc-analysis/src/typeck/snapshots/toc_analysis__typeck__test__bitwise_op_wrong_type_shl.snap
---
source: compiler/toc_analysis/src/typeck/test.rs
expression: "\n    var b : boolean\n    var r : real\n    var i : int\n    var n : nat\n    var _bi := b shl i\n    var _bn := b shl n\n    var _ib := i shl b\n    var _nb := n shl b\n    var _ri := r shl i\n    var _rn := r shl n\n    var _ir := i shl r\n    var _nr := n shl r\n"
---
"b"@(FileId(1), 9..10) [ConstVar(Var, No)]: boolean
"r"@(FileId(1), 29..30) [ConstVar(Var, No)]: real
"i"@(FileId(1), 46..47) [ConstVar(Var, No)]: int
"n"@(FileId(1), 62..63) [ConstVar(Var, No)]: nat
"_bi"@(FileId(1), 78..81) [ConstVar(Var, No)]: <error>
"_bn"@(FileId(1), 101..104) [ConstVar(Var, No)]: <error>
"_ib"@(FileId(1), 124..127) [ConstVar(Var, No)]: <error>
"_nb"@(FileId(1), 147..150) [ConstVar(Var, No)]: <error>
"_ri"@(FileId(1), 170..173) [ConstVar(Var, No)]: <error>
"_rn"@(FileId(1), 193..196) [ConstVar(Var, No)]: <error>
"_ir"@(FileId(1), 216..219) [ConstVar(Var, No)]: <error>
"_nr"@(FileId(1), 239..242) [ConstVar(Var, No)]: <error>
"<root>"@(dummy) [Module(No)]: <error>

error in file FileId(1) at 87..90: mismatched types for `shl`
| note in file FileId(1) for 91..92: this is of type `int`
| note in file FileId(1) for 85..86: this is of type `boolean`
| error in file FileId(1) for 87..90: `boolean` cannot be shifted left by `int`
| info: operands must both be integers
error in file FileId(1) at 110..113: mismatched types for `shl`
| note in file FileId(1) for 114..115: this is of type `nat`
| note in file FileId(1) for 108..109: this is of type `boolean`
| error in file FileId(1) for 110..113: `boolean` cannot be shifted left by `nat`
| info: operands must both be integers
error in file FileId(1) at 133..136: mismatched types for `shl`
| note in file FileId(1) for 137..138: this is of type `boolean`
| note in file FileId(1) for 131..132: this is of type `int`
| error in file FileId(1) for 133..136: `int` cannot be shifted left by `boolean`
| info: operands must both be integers
error in file FileId(1) at 156..159: mismatched types for `shl`
| note in file FileId(1) for 160..161: this is of type `boolean`
| note in file FileId(1) for 154..155: this is of type `nat`
| error in file FileId(1) for 156..159: `nat` cannot be shifted left by `boolean`
| info: operands must both be integers
error in file FileId(1) at 179..182: mismatched types for `shl`
| note in file FileId(1) for 183..184: this is of type `int`
| note in file FileId(1) for 177..178: this is of type `real`
| error in file FileId(1) for 179..182: `real` cannot be shifted left by `int`
| info: operands must both be integers
error in file FileId(1) at 202..205: mismatched types for `shl`
| note in file FileId(1) for 206..207: this is of type `nat`
| note in file FileId(1) for 200..201: this is of type `real`
| error in file FileId(1) for 202..205: `real` cannot be shifted left by `nat`
| info: operands must both be integers
error in file FileId(1) at 225..228: mismatched types for `shl`
| note in file FileId(1) for 229..230: this is of type `real`
| note in file FileId(1) for 223..224: this is of type `int`
| error in file FileId(1) for 225..228: `int` cannot be shifted left by `real`
| info: operands must both be integers
error in file FileId(1) at 248..251: mismatched types for `shl`
| note in file FileId(1) for 252..253: this is of type `real`
| note in file FileId(1) for 246..247: this is of type `nat`
| error in file FileId(1) for 248..251: `nat` cannot be shifted left by `real`
| info: operands must both be integers
