compiler/toc-analysis/src/typeck/snapshots/toc_analysis__typeck__test__common_op_wrong_value_identity.snap
---
source: compiler/toc-analysis/src/typeck/test.rs
expression: "\n    type t : boolean\n\n    % Type operand prevents checking of type compatibility\n    var _t := + t\n    "
---
"t"@"src/main.t:10..11" [Type]: alias[DefId(PackageId(3072), LocalDefId(0))] of boolean
"_t"@"src/main.t:90..92" [ConstVar(Var, No)]: <error>
"<root>"@"<unknown>:0..0" [Module(No)]: <error>

error at src/main.t:98..99: cannot use `t` as an expression
| error for src/main.t:98..99: `t` is a reference to a type, not a variable
| note for src/main.t:10..11: `t` declared here
