compiler/toc-analysis/src/typeck/snapshots/toc_analysis__typeck__test__common_op_wrong_value_mod.snap
---
source: compiler/toc-analysis/src/typeck/test.rs
expression: "\n    type t : int\n    var k : int\n\n    % Type operand prevents checking of type compatibility\n    var _tt := t mod t\n    var _tk := t mod k\n    var _kt := k mod t\n    "
---
"t"@(FileId(1), 10..11) [Type]: alias[DefId(PackageId(0), LocalDefId(0))] of int
"k"@(FileId(1), 26..27) [ConstVar(Var, No)]: int
"_tt"@(FileId(1), 102..105) [ConstVar(Var, No)]: int
"_tk"@(FileId(1), 125..128) [ConstVar(Var, No)]: int
"_kt"@(FileId(1), 148..151) [ConstVar(Var, No)]: int
"<root>"@(dummy) [Module(No)]: <error>

error at (FileId(1), 109..110): cannot use `t` as an expression
| error for (FileId(1), 109..110): `t` is a reference to a type, not a variable
| note for (FileId(1), 10..11): `t` declared here
error at (FileId(1), 115..116): cannot use `t` as an expression
| error for (FileId(1), 115..116): `t` is a reference to a type, not a variable
| note for (FileId(1), 10..11): `t` declared here
error at (FileId(1), 132..133): cannot use `t` as an expression
| error for (FileId(1), 132..133): `t` is a reference to a type, not a variable
| note for (FileId(1), 10..11): `t` declared here
error at (FileId(1), 161..162): cannot use `t` as an expression
| error for (FileId(1), 161..162): `t` is a reference to a type, not a variable
| note for (FileId(1), 10..11): `t` declared here
