compiler/toc-analysis/src/typeck/snapshots/toc_analysis__typeck__test__common_op_wrong_value_not_equal.snap
---
source: compiler/toc-analysis/src/typeck/test.rs
expression: "\n    type t : int\n    var k : int\n\n    % Type operand prevents checking of type compatibility\n    var _tt := t not= t\n    var _tk := t not= k\n    var _kt := k not= t\n    "
---
"t"@(FileId(1), 10..11) [Type]: alias[DefId(PackageId(0), LocalDefId(0))] of int
"k"@(FileId(1), 26..27) [ConstVar(Var, No)]: int
"_tt"@(FileId(1), 102..105) [ConstVar(Var, No)]: boolean
"_tk"@(FileId(1), 126..129) [ConstVar(Var, No)]: boolean
"_kt"@(FileId(1), 150..153) [ConstVar(Var, No)]: boolean
"<root>"@(dummy) [Module(No)]: <error>

error at (FileId(1), 109..110): cannot use `t` as an expression
| error for (FileId(1), 109..110): `t` is a reference to a type, not a variable
| note for (FileId(1), 10..11): `t` declared here
error at (FileId(1), 116..117): cannot use `t` as an expression
| error for (FileId(1), 116..117): `t` is a reference to a type, not a variable
| note for (FileId(1), 10..11): `t` declared here
error at (FileId(1), 133..134): cannot use `t` as an expression
| error for (FileId(1), 133..134): `t` is a reference to a type, not a variable
| note for (FileId(1), 10..11): `t` declared here
error at (FileId(1), 164..165): cannot use `t` as an expression
| error for (FileId(1), 164..165): `t` is a reference to a type, not a variable
| note for (FileId(1), 10..11): `t` declared here
