compiler/toc-analysis/src/typeck/snapshots/toc_analysis__typeck__test__common_op_wrong_value_or.snap
---
source: compiler/toc-analysis/src/typeck/test.rs
expression: "\n    type t : int\n    var k : int\n\n    % Type operand prevents checking of type compatibility\n    var _tt := t or t\n    var _tk := t or k\n    var _kt := k or t\n    "
---
"t"@(FileId(1), 10..11) [Type]: alias[DefId(PackageId(0), LocalDefId(0))] of int
"k"@(FileId(1), 26..27) [ConstVar(Var, No)]: int
"_tt"@(FileId(1), 102..105) [ConstVar(Var, No)]: nat
"_tk"@(FileId(1), 124..127) [ConstVar(Var, No)]: nat
"_kt"@(FileId(1), 146..149) [ConstVar(Var, No)]: nat
"<root>"@(dummy) [Module(No)]: <error>

error at (FileId(1), 109..110): cannot use `t` as an expression
| error for (FileId(1), 109..110): `t` is a reference to a type, not a variable
| note for (FileId(1), 10..11): `t` declared here
error at (FileId(1), 114..115): cannot use `t` as an expression
| error for (FileId(1), 114..115): `t` is a reference to a type, not a variable
| note for (FileId(1), 10..11): `t` declared here
error at (FileId(1), 131..132): cannot use `t` as an expression
| error for (FileId(1), 131..132): `t` is a reference to a type, not a variable
| note for (FileId(1), 10..11): `t` declared here
error at (FileId(1), 158..159): cannot use `t` as an expression
| error for (FileId(1), 158..159): `t` is a reference to a type, not a variable
| note for (FileId(1), 10..11): `t` declared here
